# Concierge

./: .gitignore  IMPLEMENTATION_SUMMARY.md  INDEX.md  MANUAL.md  NEXT_SESSION.md  QUICKREF.md  README.md  SESSION_SUMMARY.md  pyproject.toml  setup.sh
.github/workflows/: tests.yml
bit/: __init__.py  approval.py  cli.py  config.py  events.py  intent.py  job.py  logs.py  modes.py  packages.py  plan.py  planner.py  registry.py  router.py  workers_stub.py  workspace.py
docs/: ADVANCED.md  CONFIGURATION.md  PERFORMANCE.md  TROUBLESHOOTING.md  TUI_SPLASH_DESIGN.md  WORKFLOW.md
docs/examples/: README.md  workflow_audio_normalization.md  workflow_database_backup.md  workflow_video_transcoding.md
docs/sources/: ARCHITECTURE.md  bit_phase1_atomic_tasks.md  bit_phase1_atomic_tasks_v1_1.md  project_snapshot_task4_complete.md
scripts/: README.md  batch_process.sh  generate_report.sh  monitor_jobs.sh
tests/: __init__.py  test_approval.py  test_cli.py  test_config.py  test_integration.py  test_intent.py  test_job.py  test_logs.py  test_modes.py  test_packages.py  test_planner.py  test_router.py  test_workspace.py
